--- a/transition-guide/sections/temporary_global_services.adoc
+++ b/transition-guide/sections/temporary_global_services.adoc
@@ -32,9 +32,9 @@ The WIS2 Implementation plan outlines a gradual transition of data exchange from
 
 ==== Purpose
 
-Once a WIS centre has migrated from GTS to WIS2, it may want to stop sending its data directly on the GTS. This will require implementing the technical procedure described below, then when done, WMO Secretariat will coordinate the actions of the different parties to effectively allow the Member to stop the MSS. 
+Once a NMC centre, running a Message Switching System and exchanging data on the GTS, has implemented WIS2, it may want to stop sending its data directly on the GTS so that it can stop their MSS. 
 
-The WIS2 to GTS gateway will ensure that *only the data currently available on the GTS* and whose Member is wishing to stop its Message Switching System (MSS) will be re-published onto the GTS. 
+The WIS2 to GTS gateway will ensure that *only the data currently available on the GTS* and whose Member is wishing to stop its Message Switching System (MSS) will be re-published onto the GTS, so that no data is loss during the transition. 
 
 To ensure resilient operation, there will be more than one WIS2 to GTS Gateway.
 
@@ -44,15 +44,11 @@ The gateway will be provided by designated Regional Telecommunication Hubs (RTH)
 ==== Technical requirements
 ===== For WIS Centres wishing to stop their MSS
 
-A Member seeking to stop GTS transmission shall contact the WMO Secretariat, providing the following information:
-
-. The proposed date that GTS transmission will stop.
-. The WIS2 centre-id from which data destined for GTS transmission will be published.
 . The GTS header CCCC code to be used for the bulletins published on their behalf.
 . The list of GTS bulletins, and, where appropriate, their cut-off times, to be published by the Gateway on their behalf.
 *Note* Issue #32 created on the last two points.
 
-When publishing a WIS2 Notification Message for data that should also be available on the GTS, the WIS Centre shall indicate the GTS Abbreviated Header Line (AHL) of the bulletin in which the data is to be published. 
+A Member planning to stop GTS transmission shall, in addition to WIS2 Node operations, and when publishing a WIS2 Notification Message for data that should also be available on the GTS shall indicate the GTS Abbreviated Header Line (AHL) of the bulletin in which the data is to be published. 
 
 This is done by including the ``gts`` property in the WIS2 Notification Message (see example below). This enables the WIS2 to GTS Gateway operator to easily identify data for republication on the GTS and the AHL of the associated data.
   
@@ -101,3 +97,11 @@ For each WIS2 notification message received, the Gateway will:
 The Gateway's MSS will process incoming data files, batching individual items into bulletins as per configuration, and publish those bulletins onto the GTS for onward distributed via RTHs on the MTN and beyond.
 
 The Gateway's MSS will publish bulletin amendments / corrections where data arrives after the cut-off time.
+*Note* See Issue #32
+
+== Stopping a Message Switching System
+
+Thanks to the gateway functions described in previous chapter, all WIS Center currently using the GTS to exchange operational data, having successfully implementing a WIS2 Node with the additional features required for the gateways to provide their service, will be able to stop their Message Switching System, if they wish to do so, before the end of the complete migration.
+Gradually stopping all the MSS shall be done in an orderly and coordinated manner so that all data required by Members for their operations will continue to be available.
+
+"Management of WIS1 and GTS" part of this Transition Guide recalling the various roles on the GTS explain when a Center can stop their MSS.
