--- a/transition-guide/sections/temporary_global_services.adoc
+++ b/transition-guide/sections/temporary_global_services.adoc
@@ -8,11 +8,10 @@ During the transition period, in order to avoid some WIS centres being forced to
 
 ==== Purpose
 
-The purpose of the GTS to WIS2 gateway is to enable Members who have migrated to WIS2 and have stopped their GTS systems to continue receiving GTS data from WIS2. This gateway also enables users who are not connected to GTS to access GTS data, during the transition phase, from WIS2. The GTS to WIS2 gateway will forward the GTS traffic it receives to WIS2. In accordance withn WIS2 specification, every data received on one GTS link will be stored on a HTTP(s) endpoint of the Gateway and will generate a WIS2 Notification Message. 
+The purpose of the GTS to WIS2 gateway is to enable Members who have migrated to WIS2 and have stopped their GTS systems to continue receiving GTS data from WIS2. This gateway also enables users who are not connected to GTS to access GTS data, during the transition phase, from WIS2. The GTS to WIS2 gateway will forward the GTS traffic it receives to WIS2. In accordance with the WIS2 specification, every data received on one GTS link will be stored on a HTTP(s) endpoint of the Gateway and will generate a WIS2 Notification Message. 
 
 ==== GTS to WIS2 Gateway provider
-
-The purpose of the GTS to WIS2 gateway is to enable Members, having migrated to WIS2, to stop their GTS systems while continueing receiving GTS data via WIS2. In addition, this gateway function also enables users who are not connected to GTS to already obtain data originally published on the GTS. The function of GTS to WIS2 gateway is to forward all the GTS traffic received by the Member operating that service, to WIS2, so that data received on its Message Switching System (MSS) will be stored and made available via HTTP(S). A Notification Message is then generated. It is published using the centre-id name defined for this gateway.
+The gateway will be provided by Germany's Deutscher Wetterdienst (DWD) and the Japan Meteorological Agency (JMA).
  
 ==== Technical requirements
 
@@ -25,6 +24,7 @@ The purpose of the GTS to WIS2 gateway is to enable Members, having migrated to 
 * The Global Caches will cache data that is being published using ``core`` in the Topic Hierarchy.
 * Data Consumers receiving the GTS data through WIS2 will need to be able to handle duplicates. This is consistent with the current practices of handling duplicate messages on the GTS.
 * Access to recommended GTS data should be restricted to WMO members.
+* Each GTS to WIS2 Gateway maintains a list of TTAAii headers for recommended data in order to be able to send the notification to the correct topic. The list is coordinated and shared between the gateway operators.
 
 === WIS2 to GTS Gateway
 
