--- a/transition-guide/index.adoc
+++ b/transition-guide/index.adoc
@@ -1,6 +1,6 @@
 :title: Draft guidance on transition from GTS to WIS2
 :titletext: {title}
-:version: 2.0.0alpha1
+:version: 2024-02-05
 :date: {docdate}
 :copyright: Copyright © 2024 World Meteorological Organization (WMO)
 :doctype: book
